--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,18 +6,19 @@
 #    By: ghwa <ghwa@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/05 11:08:12 by ghwa              #+#    #+#              #
-#    Updated: 2024/03/05 13:50:39 by ghwa             ###   ########.fr        #
+#    Updated: 2024/04/02 10:28:17 by ghwa             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = clang++
-CFLAGS = -Wall -Werror -Wextra -fsanitize=address -std=c++11
+FLAGS = -Wall -Werror -Wextra -fsanitize=address -std=c++11
+FILES = Phonebook.cpp Main.cpp Contact.cpp
 NAME = phonebook
 
 all:$(NAME)
 
-$(NAME): Phonebook.cpp
-	$(CC) $(CFLAGS) -o $@ $^
+$(NAME): $(FILES)
+	$(CC) $(FLAGS) -o $@ $^
 
 clean:
 	rm -f $(NAME)
