--- a/cpp00/ex01/Makefile
+++ b/cpp00/ex01/Makefile
@@ -6,19 +6,23 @@
 #    By: ghwa <ghwa@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/03/05 11:08:12 by ghwa              #+#    #+#              #
-#    Updated: 2024/04/02 10:28:17 by ghwa             ###   ########.fr        #
+#    Updated: 2024/04/08 16:08:29 by ghwa             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
 CC = clang++
 FLAGS = -Wall -Werror -Wextra -fsanitize=address -std=c++11
-FILES = Phonebook.cpp Main.cpp Contact.cpp
+SRCS = PhoneBook.cpp Main.cpp Contact.cpp
+OBJS = $(SRCS:.cpp=.o)
 NAME = phonebook
 
 all:$(NAME)
 
-$(NAME): $(FILES)
-	$(CC) $(FLAGS) -o $@ $^
+%.o: %.cpp
+	$(CC) $(FLAGS) -c $< -o $@
+
+$(NAME): $(OBJS)
+	$(CC) $(FLAGS) $(OBJS) -o $(NAME)
 
 clean:
 	rm -f $(NAME)
