--- a/cpp02/ex00/Makefile
+++ b/cpp02/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: ghwa <ghwa@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/21 13:39:06 by ghwa              #+#    #+#              #
-#    Updated: 2024/05/21 13:39:39 by ghwa             ###   ########.fr        #
+#    Updated: 2024/08/26 11:29:45 by ghwa             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC = clang++
-FLAGS = -Wall -Werror -Wextra -std=c++11
-SRCS = main.cpp
+CC = c++
+FLAGS = -Wall -Werror -Wextra -std=c++98
+SRCS = main.cpp Fixed.hpp
 OBJS = $(SRCS:.cpp=.o)
 NAME = main
 
