--- a/cpp01/ex00/Makefile
+++ b/cpp01/ex00/Makefile
@@ -6,15 +6,15 @@
 #    By: ghwa <ghwa@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/04/09 17:58:23 by ghwa              #+#    #+#              #
-#    Updated: 2024/08/29 14:19:26 by ghwa             ###   ########.fr        #
+#    Updated: 2024/08/29 12:56:26 by ghwa             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC = c++
+CC = g++
 FLAGS = -Wall -Werror -Wextra -std=c++11
-SRCS = main.cpp
+SRCS = Zombie.cpp main.cpp
 OBJS = $(SRCS:.cpp=.o)
-NAME = a.out
+NAME = zombie
 
 all:$(NAME)
 
