--- a/cpp03/ex00/Makefile
+++ b/cpp03/ex00/Makefile
@@ -11,7 +11,7 @@
 # **************************************************************************** #
 
 CC = c++
-FLAGS = -Wall -Werror -Wextra -std=c++98
+FLAGS = -Wall -Werror -Wextra -std=c++98 -pedantic
 SRCS = main.cpp ClapTrap.cpp
 OBJS = $(SRCS:.cpp=.o)
 NAME = a.out
