--- a/cpp05/ex00/Makefile
+++ b/cpp05/ex00/Makefile
@@ -6,13 +6,13 @@
 #    By: ghwa <ghwa@student.42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2024/05/21 13:39:06 by ghwa              #+#    #+#              #
-#    Updated: 2024/11/05 11:03:47 by ghwa             ###   ########.fr        #
+#    Updated: 2024/11/06 15:20:11 by ghwa             ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
-CC = c++
+CC = g++
 FLAGS = -Wall -Werror -Wextra -std=c++98 -pedantic
-SRCS = main.cpp Bureaucrat.cpp
+SRCS = main.cpp Bureaucrat.cpp Form.cpp
 OBJS = $(SRCS:.cpp=.o)
 NAME = a.out
 
